# timingstack

./: .pre-commit-config.yaml  .ruff.toml  README.md  example.py  pyproject.toml  timestack.py
.github/workflows/: publish-pypi.yaml  static-check.yml  test.yml
src/: timestack.py
src/timestack/: __init__.py  timestack.py
src/timingstack/: __init__.py  reporting.py  timingstack.py
tests/: test_timestack.py
